Can detect Wix v4 and v5.